--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -35,7 +35,7 @@ services:
   Dawid\CronBundle\CronJobRunner\CronJobRegistry:
     class: 'Dawid\CronBundle\CronJobRunner\CronJobRegistry'
     arguments:
-      - !tagged_iterator cron.job
+      - !tagged_iterator { tag: 'cron.job' }
 
   Dawid\CronBundle\CronJobRunner\CronJobRegistryInterface:
     class: 'Dawid\CronBundle\CronJobRunner\CronJobRegistry'
