--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
         "dragonmantank/cron-expression": "~2.1|~3.0",
         "symfony/framework-bundle": "~4.0|~5.0|~6.0",
         "symfony/console": "~4.0|~5.0|~6.0",
-        "symfony/lock": "~4.0|~5.0|~6.0"
+        "symfony/lock": "~4.0|~5.0|~6.0",
+        "doctrine/orm": "3.0.x-dev",
+        "ramsey/uuid-doctrine": "dev-main"
     },
     "license": "MIT",
     "autoload": {
