--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
         "symfony/framework-bundle": "~4.0|~5.0|~6.0",
         "symfony/console": "~4.0|~5.0|~6.0",
         "symfony/lock": "~4.0|~5.0|~6.0",
-        "doctrine/orm": "3.0.x-dev",
-        "ramsey/uuid-doctrine": "dev-main"
+        "doctrine/orm": "^2.0",
+        "ramsey/uuid-doctrine": "^1.0"
     },
     "license": "MIT",
     "autoload": {
