--- a/composer.json
+++ b/composer.json
@@ -23,5 +23,19 @@
             "email": "bodacz6512@gmail.com"
         }
     ],
-    "minimum-stability": "dev"
+    "scripts": {
+        "phpstan": [
+            "vendor/bin/phpstan analyse -c phpstan.neon --no-progress --memory-limit=-1 --ansi"
+        ],
+        "csfixer": [
+            "tools/php-cs-fixer/vendor/bin/php-cs-fixer fix --config=tools/php-cs-fixer/.cs-fixer.config.php --dry-run --allow-risky=yes --diff --ansi"
+        ]
+    },
+    "minimum-stability": "dev",
+    "require-dev": {
+        "phpstan/phpstan": "1.9.x-dev",
+        "phpstan/phpstan-doctrine": "^1.3",
+        "phpstan/phpstan-symfony": "^1.2",
+        "timeweb/phpstan-enum": "^3.1"
+    }
 }
