--- a/composer.json
+++ b/composer.json
@@ -29,11 +29,14 @@
         ],
         "csfixer": [
             "tools/php-cs-fixer/vendor/bin/php-cs-fixer fix --config=tools/php-cs-fixer/.cs-fixer.config.php --dry-run --allow-risky=yes --diff --ansi"
+        ],
+        "csfixer-fix": [
+            "tools/php-cs-fixer/vendor/bin/php-cs-fixer fix --config=tools/php-cs-fixer/.cs-fixer.config.php --allow-risky=yes --ansi"
         ]
     },
     "minimum-stability": "dev",
     "require-dev": {
-        "phpstan/phpstan": "1.9.x-dev",
+        "phpstan/phpstan": "^1.8",
         "phpstan/phpstan-doctrine": "^1.3",
         "phpstan/phpstan-symfony": "^1.2",
         "timeweb/phpstan-enum": "^3.1"
