--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,5 +35,5 @@ jobs:
       - run:
           name: CSFIXER
           command: |
-            composer install --working-dir=tools/php-cs-fixer
+            php composer.phar install --working-dir=tools/php-cs-fixer
             php composer.phar csfixer
